--- a/travelRecord/bin/main/static/index.html
+++ b/travelRecord/bin/main/static/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="EUC-KR">
+<meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
-	hello
+	메인페이지 ㅁㄴㅇ
 </body>
 </html>
